--- a/pages/manage/manage.wxml
+++ b/pages/manage/manage.wxml
@@ -59,4 +59,5 @@
 			<view class="bgColorRed vw20 vh20" style="border-radius:50px 50px 0 0;transform: rotate(45deg);"></view>
 		</view> -->
 	</view>
+	<l-message content="{{content}}" />
 </view>
