--- a/pages/quotedPriceDetail/quotedPriceDetail.scss
+++ b/pages/quotedPriceDetail/quotedPriceDetail.scss
@@ -43,5 +43,32 @@
   .checkbox-index--van-checkbox__icon--checked {
     background-color: #27a2fd;
     border-color: #27a2fd;
+	}
+	
+	.van-tabs__line {
+    background-color: #27a2fd;
+	}
+	
+	.van-tabs__nav--complete {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .van-tabs__scroll--card {
+    margin: 0;
+    width: 100%;
+    border-color: #27a2fd;
+  }
+
+  .van-tab {
+    color: #27a2fd;
+  }
+
+  .van-tab.van-tab--active {
+    background-color: #27a2fd;
+    color: #fff;
+  }
+  .van-tabs__nav--card .van-tab {
+    border-right-color: #27a2fd;
   }
 }
