--- a/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplement.wxml
+++ b/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplement.wxml
@@ -13,7 +13,7 @@
 	</scroll-view>
 
 	<view class="flex bgColorWhite">
-		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="计划单号/订单号" hide-label="{{true}}" />
+		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="补充单号/订单号" hide-label="{{true}}" />
 		<van-icon class="w10" name="more-o" bindtap="openPopup" />
 	</view>
 
@@ -21,7 +21,7 @@
 		<view style="content: ''; overflow: hidden;"></view>
 		<view wx:for="{{list}}" class="card flex">
 			<view class="w100 flex aic">
-				<view class="title w32">计划单号：</view>
+				<view class="title w32">补充单号：</view>
 				<view>{{item.code}}</view>
 				<view class="ml20 colorWhite bgColorOrange pl10 pr10 pt5 pb5" style="border-radius: 500px;"
 					wx:if="{{item.is_check === 0}}">待审核</view>
@@ -49,17 +49,17 @@
 				<view>{{item.user_name}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
-				<view class="w50 flex">
-					<view class="title w65">计划生产数：</view>
-					<view>{{item.total_production_number}}</view>
-				</view>
-				<view class="title">计划原料数：</view>
-				<view>{{item.total_plan_number}}</view>
+				<view class="title w32">补原料单位：</view>
+				<view>{{item.client_name}}</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="title w32">原因：</view>
+				<view class="color27A2" bindtap="checkReason" data-item="{{item}}">点击查看</view>
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="w50 flex">
-					<view class="title w65">平均损耗：</view>
-					<view>{{item.pre_loss}}%</view>
+					<view class="title w65">补原料数：</view>
+					<view>{{item.total_plan_number}}</view>
 				</view>
 				<view class="w50 flex">
 					<view class="title">采购状态：</view>
@@ -77,6 +77,7 @@
 	</scroll-view>
 
 	<l-message content="{{content}}" />
+	<van-toast id="van-toast" />
 	<van-popup show="{{ showPopup }}" bind:close="closePopup" bind:click-overlay="closePopup" position="right">
 		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
 			<view class="vh12"></view>
@@ -109,18 +110,6 @@
 				<view class="flex">
 					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="status">
 						<label class="radio" wx:for="{{statusList}}" wx:key="key">
-							<view>
-								<view class="label">{{item.text}}</view>
-								<radio value="{{index}}" checked="{{item.checked}}" />
-							</view>
-						</label>
-					</radio-group>
-				</view>
-				<view class="line"></view>
-				<view>订单/样单：</view>
-				<view class="flex">
-					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="order_type">
-						<label class="radio" wx:for="{{orderType}}" wx:key="key">
 							<view>
 								<view class="label">{{item.text}}</view>
 								<radio value="{{index}}" checked="{{item.checked}}" />
