--- a/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplement.scss
+++ b/pages/billingManagement/rawMaterialSupplement/rawMaterialSupplement.scss
@@ -7,6 +7,12 @@
     border-bottom: 2px solid #27a2fd;
   }
 
+	.card{
+		margin-left: 10px;
+		margin-right: 10px;
+		width: 95vw;
+	}
+
   .title {
     color: #666666;
   }
