--- a/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
+++ b/pages/billingManagement/rawMaterialTransferOrder/rawMaterialTransferOrder.wxml
@@ -13,7 +13,7 @@
 	</scroll-view>
 
 	<view class="flex bgColorWhite">
-		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="补充单号/订单号" hide-label="{{true}}" />
+		<l-input class="w90" bind:lininput="changeParams" value="{{code}}" placeholder="调取单号/订单号" hide-label="{{true}}" />
 		<van-icon class="w10" name="more-o" bindtap="openPopup" />
 	</view>
 
@@ -21,15 +21,15 @@
 		<view style="content: ''; overflow: hidden;"></view>
 		<view wx:for="{{list}}" class="card flex">
 			<view class="w100 flex aic">
-				<view class="title w32">补充单号：</view>
+				<view class="title w32">调取单号：</view>
 				<view>{{item.code}}</view>
-				<view class="ml40 colorWhite bgColorOrange pl10 pr10 pt5 pb5" style="border-radius: 500px;"
+				<view class="ml30 colorWhite bgColorOrange pl10 pr10 pt5 pb5" style="border-radius: 500px;"
 					wx:if="{{item.is_check === 0}}">待审核</view>
-				<view class="ml40 colorWhite bgColor27A2 pl10 pr10 pt5 pb5" style="border-radius: 500px;"
+				<view class="ml30 colorWhite bgColor27A2 pl10 pr10 pt5 pb5" style="border-radius: 500px;"
 					wx:elif="{{item.is_check === 1}}">已审核</view>
-				<view class="ml40 colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px;"
+				<view class="ml30 colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px;"
 					wx:elif="{{item.is_check === 2}}">已驳回</view>
-				<view class="ml40 colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px;" wx:else>单据异常</view>
+				<view class="ml20 colorWhite bgColorRed pl10 pr10 pt5 pb5" style="border-radius: 500px;" wx:else>单据异常</view>
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="title w32">关联订单号：</view>
@@ -49,24 +49,27 @@
 				<view>{{item.user_name}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
-				<view class="title w32">补原料单位：</view>
-				<view>{{item.client_name}}</view>
-			</view>
-			<view wx:if="{{item.desc}}" class="w100 flex aic mt10">
-				<view class="title w32">原因：</view>
-				<view class="color27A2" bindtap="checkReason" data-item="{{item}}">点击查看</view>
+				<view class="title w32">调取仓库：</view>
+				<view>{{item.store}}</view>
 			</view>
 			<view class="w100 flex aic mt10">
 				<view class="w50 flex">
-					<view class="title w65">补原料数：</view>
-					<view>{{item.total_plan_number}}</view>
+					<view class="title w65">调取数量：</view>
+					<view>{{item.total_number}}</view>
 				</view>
 				<view class="w50 flex">
-					<view class="title">采购状态：</view>
-					<view wx:if="{{item.material_order_progress > 0 && item.material_order_progress < 100}}" class="color03d0">进行中
-					</view>
-					<view wx:if="{{item.material_order_progress === 0}}" class="colorOrange">未进行</view>
-					<view wx:if="{{item.material_order_progress >= 100}}" class="color27A2">已完成</view>
+					<view class="title w65">调取金额：</view>
+					<view>{{item.total_price}}</view>
+				</view>
+			</view>
+			<view class="w100 flex aic mt10">
+				<view class="w50 flex">
+					<view class="title w65">入库数量：</view>
+					<view>{{item.total_push_number}}</view>
+				</view>
+				<view class="w50 flex">
+					<view class="title w65">入库金额：</view>
+					<view>{{item.total_push_price}}</view>
 				</view>
 			</view>
 		</view>
@@ -82,6 +85,18 @@
 		<view class="vh100 vw90 pl20 pr20" style="box-sizing: border-box;">
 			<view class="vh12"></view>
 			<scroll-view>
+				<view>筛选仓库：</view>
+				<view class="flex">
+					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="store">
+						<label class="radio" wx:for="{{storeList}}" wx:key="key">
+							<view>
+								<view class="label">{{item.text}}</view>
+								<radio value="{{index}}" checked="{{item.checked}}" />
+							</view>
+						</label>
+					</radio-group>
+				</view>
+				<view class="line"></view>
 				<view>创建人：</view>
 				<view class="flex">
 					<radio-group class="radio-label flex flexWarp" bindchange="bindPickerChangeAge" data-type="user">
